--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body class="body">
-<div class="page-container">
  <header class="header">
-  <div class="header-container">
-    
-    <div class="nav-wrapper">
-      <div class="logo-wrapper">
+  <div class="container">
         <a href="./index.html" class="logo-header">Web<span class="logo-studio">Studio</span>
         </a>
-      </div>
       <nav class="nav">
         <ul class="nav-list">
           <li><a href="./index.html" class="nav-link">Studio</a></li>
@@ -27,25 +22,25 @@
           <li><a href="" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
-    </div>
-
     <address class="contacts">
       <ul class="contacts-list">
         <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
         <li><a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a></li>
       </ul>
     </address>
+    </div>
+    </header>
+    
 
-  </div>
-</header>
-
-    <main>
         <section class="hero">
+            <div class="container">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button type="button" class="hero-button">Order Service</button>
+            </div>
         </section>
 
         <section class="advantages">
+            <div class="container">
             <h2 hidden class="advantages-title">Advantages</h2>
             <ul class="advantages-list">
             <li class="advantages-item"><h3 class="advantages-subtitle">Strategy</h3><p class="advantages-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
@@ -53,9 +48,11 @@
             <li class="advantages-item"><h3 class="advantages-subtitle">Diligence</h3><p class="advantages-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p></li>
             <li class="advantages-item"><h3 class="advantages-subtitle">Technologies</h3><p class="advantages-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul>
+            </div>
         </section>
 
         <section class="our-team">
+            <div class="container">
             <h2 class="our-team-title">Our Team</h2>
             <ul class="our-team-list">
                <li class="our-team-item"> 
@@ -91,10 +88,11 @@
                         <p class="our-team-role">UI Designer</p>
                 </li>
             </ul>
-
+            </div>
         </section>
 
         <section class="portfolio">
+            <div class="container">
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-list">
                 <li class="portfolio-item">
@@ -146,10 +144,12 @@
                     <p class="portfolio-text">Marketing</p>
                 </li>
             </ul>
+            </div>
         </section>
 </main>
 
 <footer class="footer">
+    <div class="container">
     <a href="./index.html" class="logo-footer">Web<span class="logo-studio-footer">Studio</span>
         </a>
     <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
