added styles to section our team

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body class="body">
  <header class="header">
   <div class="container">
+    <div class="container-header">
         <a href="./index.html" class="logo-header">Web<span class="logo-studio">Studio</span>
         </a>
       <nav class="nav">
@@ -29,6 +30,7 @@
       </ul>
     </address>
     </div>
+</div>
     </header>
     
 
