--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </div>
 </div>
     </header>
+    <main>
     
 
         <section class="hero">
@@ -152,10 +153,12 @@
 
 <footer class="footer">
     <div class="container">
+        <div class="container-footer">
     <a href="./index.html" class="logo-footer">Web<span class="logo-studio-footer">Studio</span>
         </a>
     <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
+    </div>
 </footer>
-</div>
 </body>
 </html>
