--- a/index.html
+++ b/index.html
@@ -79,23 +79,31 @@
                 <ul class="our-team-list">
                     <li class="our-team-item">
                         <img src="./images/image1.jpg" width="264" height="260" alt="Mark-PD" />
+                        <div class="our-team-text-block">
                         <h3 class="our-team-name">Mark Guerrero</h3>
                         <p class="our-team-role">Product Designer</p>
+                        </div>
                     </li>
                     <li class="our-team-item">
                         <img src="./images/image2.jpg" width="264" height="260" alt="tom-ftdev" />
+                        <div class="our-team-text-block">
                         <h3 class="our-team-name">Tom Ford</h3>
                         <p class="our-team-role">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="our-team-item">
                         <img src="./images/image3.jpg" width="264" height="260" alt="camila-marketing" />
+                        <div class="our-team-text-block">
                         <h3 class="our-team-name">Camila Garcia</h3>
                         <p class="our-team-role">Marketing</p>
+                        </div>
                     </li>
                     <li class="our-team-item">
                         <img src="./images/image4.jpg" width="264" height="260" alt="daniel-uideg" />
+                        <div class="our-team-text-block">
                         <h3 class="our-team-name">Daniel Wilson</h3>
                         <p class="our-team-role">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
