--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           <h2 class="advantages-title visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
+              <svg class="icon-advantages" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
               <h3 class="advantages-subtitle">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
