--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
               </p>
             </li>
             <li class="advantages-item">
+              <svg class="icon-advantages" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
               <h3 class="advantages-subtitle">Punctuality</h3>
               <p class="advantages-text">
                 Bring the key message to the brand's audience for the best price
@@ -79,6 +82,9 @@
               </p>
             </li>
             <li class="advantages-item">
+              <svg class="icon-advantages" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
               <h3 class="advantages-subtitle">Diligence</h3>
               <p class="advantages-text">
                 Research and confirm brands with the strongest digital growth
