--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <ul class="advantages-list">
             <li class="advantages-item">
               <svg class="icon-advantages" width="64" height="64">
-                <use href="./images/icons.svg#icon-antenna"></use>
+                <use href="./images/icons.svg#iconantenna"></use>
               </svg>
               <h3 class="advantages-subtitle">Strategy</h3>
               <p class="advantages-text">
@@ -73,7 +73,7 @@
             </li>
             <li class="advantages-item">
               <svg class="icon-advantages" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock"></use>
+                <use href="./images/icons.svg#iconclock"></use>
               </svg>
               <h3 class="advantages-subtitle">Punctuality</h3>
               <p class="advantages-text">
@@ -83,7 +83,7 @@
             </li>
             <li class="advantages-item">
               <svg class="icon-advantages" width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram"></use>
+                <use href="./images/icons.svg#icondiagram"></use>
               </svg>
               <h3 class="advantages-subtitle">Diligence</h3>
               <p class="advantages-text">
@@ -92,6 +92,9 @@
               </p>
             </li>
             <li class="advantages-item">
+              <svg class="icon-advantages" width="64" height="64">
+                <use href="./images/icons.svg#iconastronaut"></use>
+              </svg>
               <h3 class="advantages-subtitle">Technologies</h3>
               <p class="advantages-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -116,6 +119,28 @@
               <div class="our-team-text-block">
                 <h3 class="our-team-name">Mark Guerrero</h3>
                 <p class="our-team-role">Product Designer</p>
+                 <div class="sociallinks-icon-block">
+                  <a class="sociallinks-icon" href="">
+                   <svg class="icon">
+                    <use href="./images/icons.svg#iconinstagram"></use>
+                   </svg>
+                  </a>
+                    <a class="sociallinks-icon" href="">
+                      <svg class="icon">
+                       <use href="./images/icons.svg#icontwitter"></use>
+                      </svg>
+                    </a>
+                    <a class="sociallinks-icon" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#iconfacebook"></use>
+                      </svg>
+                    </a>
+                    <a class="sociallinks-icon" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#iconlinkedin"></use>
+                      </svg>
+                    </a>
+                 </div>
               </div>
             </li>
             <li class="our-team-item">
