added icon to our team

--- a/index.html
+++ b/index.html
@@ -153,6 +153,28 @@
               <div class="our-team-text-block">
                 <h3 class="our-team-name">Tom Ford</h3>
                 <p class="our-team-role">Frontend Developer</p>
+                <div class="sociallinks-icon-block">
+                  <a class="sociallinks-icon" href="">
+                   <svg class="icon">
+                    <use href="./images/icons.svg#iconinstagram"></use>
+                   </svg>
+                  </a>
+                    <a class="sociallinks-icon" href="">
+                      <svg class="icon">
+                       <use href="./images/icons.svg#icontwitter"></use>
+                      </svg>
+                    </a>
+                    <a class="sociallinks-icon" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#iconfacebook"></use>
+                      </svg>
+                    </a>
+                    <a class="sociallinks-icon" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#iconlinkedin"></use>
+                      </svg>
+                    </a>
+                 </div>
               </div>
             </li>
             <li class="our-team-item">
@@ -165,6 +187,28 @@
               <div class="our-team-text-block">
                 <h3 class="our-team-name">Camila Garcia</h3>
                 <p class="our-team-role">Marketing</p>
+                <div class="sociallinks-icon-block">
+                  <a class="sociallinks-icon" href="">
+                   <svg class="icon">
+                    <use href="./images/icons.svg#iconinstagram"></use>
+                   </svg>
+                  </a>
+                    <a class="sociallinks-icon" href="">
+                      <svg class="icon">
+                       <use href="./images/icons.svg#icontwitter"></use>
+                      </svg>
+                    </a>
+                    <a class="sociallinks-icon" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#iconfacebook"></use>
+                      </svg>
+                    </a>
+                    <a class="sociallinks-icon" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#iconlinkedin"></use>
+                      </svg>
+                    </a>
+                 </div>
               </div>
             </li>
             <li class="our-team-item">
@@ -177,6 +221,28 @@
               <div class="our-team-text-block">
                 <h3 class="our-team-name">Daniel Wilson</h3>
                 <p class="our-team-role">UI Designer</p>
+                <div class="sociallinks-icon-block">
+                  <a class="sociallinks-icon" href="">
+                   <svg class="icon">
+                    <use href="./images/icons.svg#iconinstagram"></use>
+                   </svg>
+                  </a>
+                    <a class="sociallinks-icon" href="">
+                      <svg class="icon">
+                       <use href="./images/icons.svg#icontwitter"></use>
+                      </svg>
+                    </a>
+                    <a class="sociallinks-icon" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#iconfacebook"></use>
+                      </svg>
+                    </a>
+                    <a class="sociallinks-icon" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#iconlinkedin"></use>
+                      </svg>
+                    </a>
+                 </div>
               </div>
             </li>
           </ul>
