--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <header class="header">
       <div class="container">
         <nav class="nav">
-        <a href="./index.html" class="logo-header"
-          >Web<span class="logo-studio">Studio</span>
-        </a>
+          <a href="./index.html" class="logo-header"
+            >Web<span class="logo-studio">Studio</span>
+          </a>
           <ul class="nav-list">
             <li><a href="./index.html" class="nav-link active">Studio</a></li>
             <li><a href="" class="nav-link">Portfolio</a></li>
@@ -119,28 +119,28 @@
               <div class="our-team-text-block">
                 <h3 class="our-team-name">Mark Guerrero</h3>
                 <p class="our-team-role">Product Designer</p>
-                 <div class="sociallinks-icon-block">
+                <div class="sociallinks-icon-block">
                   <a class="sociallinks-icon" href="">
-                   <svg class="icon">
-                    <use href="./images/icons.svg#iconinstagram"></use>
-                   </svg>
+                    <svg class="icon">
+                      <use href="./images/icons.svg#iconinstagram"></use>
+                    </svg>
                   </a>
-                    <a class="sociallinks-icon" href="">
-                      <svg class="icon">
-                       <use href="./images/icons.svg#icontwitter"></use>
-                      </svg>
-                    </a>
-                    <a class="sociallinks-icon" href="">
-                      <svg class="icon">
-                        <use href="./images/icons.svg#iconfacebook"></use>
-                      </svg>
-                    </a>
-                    <a class="sociallinks-icon" href="">
-                      <svg class="icon">
-                        <use href="./images/icons.svg#iconlinkedin"></use>
-                      </svg>
-                    </a>
-                 </div>
+                  <a class="sociallinks-icon" href="">
+                    <svg class="icon">
+                      <use href="./images/icons.svg#icontwitter"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallinks-icon" href="">
+                    <svg class="icon">
+                      <use href="./images/icons.svg#iconfacebook"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallinks-icon" href="">
+                    <svg class="icon">
+                      <use href="./images/icons.svg#iconlinkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="our-team-item">
@@ -155,26 +155,26 @@
                 <p class="our-team-role">Frontend Developer</p>
                 <div class="sociallinks-icon-block">
                   <a class="sociallinks-icon" href="">
-                   <svg class="icon">
-                    <use href="./images/icons.svg#iconinstagram"></use>
-                   </svg>
+                    <svg class="icon">
+                      <use href="./images/icons.svg#iconinstagram"></use>
+                    </svg>
                   </a>
-                    <a class="sociallinks-icon" href="">
-                      <svg class="icon">
-                       <use href="./images/icons.svg#icontwitter"></use>
-                      </svg>
-                    </a>
-                    <a class="sociallinks-icon" href="">
-                      <svg class="icon">
-                        <use href="./images/icons.svg#iconfacebook"></use>
-                      </svg>
-                    </a>
-                    <a class="sociallinks-icon" href="">
-                      <svg class="icon">
-                        <use href="./images/icons.svg#iconlinkedin"></use>
-                      </svg>
-                    </a>
-                 </div>
+                  <a class="sociallinks-icon" href="">
+                    <svg class="icon">
+                      <use href="./images/icons.svg#icontwitter"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallinks-icon" href="">
+                    <svg class="icon">
+                      <use href="./images/icons.svg#iconfacebook"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallinks-icon" href="">
+                    <svg class="icon">
+                      <use href="./images/icons.svg#iconlinkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="our-team-item">
@@ -189,26 +189,26 @@
                 <p class="our-team-role">Marketing</p>
                 <div class="sociallinks-icon-block">
                   <a class="sociallinks-icon" href="">
-                   <svg class="icon">
-                    <use href="./images/icons.svg#iconinstagram"></use>
-                   </svg>
+                    <svg class="icon">
+                      <use href="./images/icons.svg#iconinstagram"></use>
+                    </svg>
                   </a>
-                    <a class="sociallinks-icon" href="">
-                      <svg class="icon">
-                       <use href="./images/icons.svg#icontwitter"></use>
-                      </svg>
-                    </a>
-                    <a class="sociallinks-icon" href="">
-                      <svg class="icon">
-                        <use href="./images/icons.svg#iconfacebook"></use>
-                      </svg>
-                    </a>
-                    <a class="sociallinks-icon" href="">
-                      <svg class="icon">
-                        <use href="./images/icons.svg#iconlinkedin"></use>
-                      </svg>
-                    </a>
-                 </div>
+                  <a class="sociallinks-icon" href="">
+                    <svg class="icon">
+                      <use href="./images/icons.svg#icontwitter"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallinks-icon" href="">
+                    <svg class="icon">
+                      <use href="./images/icons.svg#iconfacebook"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallinks-icon" href="">
+                    <svg class="icon">
+                      <use href="./images/icons.svg#iconlinkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="our-team-item">
@@ -223,26 +223,26 @@
                 <p class="our-team-role">UI Designer</p>
                 <div class="sociallinks-icon-block">
                   <a class="sociallinks-icon" href="">
-                   <svg class="icon">
-                    <use href="./images/icons.svg#iconinstagram"></use>
-                   </svg>
+                    <svg class="icon">
+                      <use href="./images/icons.svg#iconinstagram"></use>
+                    </svg>
                   </a>
-                    <a class="sociallinks-icon" href="">
-                      <svg class="icon">
-                       <use href="./images/icons.svg#icontwitter"></use>
-                      </svg>
-                    </a>
-                    <a class="sociallinks-icon" href="">
-                      <svg class="icon">
-                        <use href="./images/icons.svg#iconfacebook"></use>
-                      </svg>
-                    </a>
-                    <a class="sociallinks-icon" href="">
-                      <svg class="icon">
-                        <use href="./images/icons.svg#iconlinkedin"></use>
-                      </svg>
-                    </a>
-                 </div>
+                  <a class="sociallinks-icon" href="">
+                    <svg class="icon">
+                      <use href="./images/icons.svg#icontwitter"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallinks-icon" href="">
+                    <svg class="icon">
+                      <use href="./images/icons.svg#iconfacebook"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallinks-icon" href="">
+                    <svg class="icon">
+                      <use href="./images/icons.svg#iconlinkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
           </ul>
@@ -254,72 +254,126 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/image5.jpg"
-                width="360"
-                height="300"
-                alt="banking-app"
-              />
+              <div class="portfolio-thumb">
+                <img
+                  src="./images/image5.jpg"
+                  width="360"
+                  height="300"
+                  alt="banking-app"
+                />
+                <div class="portfolio-baner">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-thumb">
               <img
                 src="./images/image6.jpg"
                 width="360"
                 height="300"
                 alt="Cashless_Payment"
               />
+              <div class="portfolio-baner">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-thumb">
               <img
                 src="./images/image7.jpg"
                 width="360"
                 height="300"
                 alt="laptop"
               />
+              <div class="portfolio-baner">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-thumb">
               <img
                 src="./images/image8.jpg"
                 width="360"
                 height="300"
                 alt="car_while"
               />
+              <div class="portfolio-baner">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-thumb">
               <img
                 src="./images/image9.jpg"
                 width="360"
                 height="300"
                 alt="phonescreen"
               />
+              <div class="portfolio-baner">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-thumb">
               <img
                 src="./images/image10.jpg"
                 width="360"
                 height="300"
                 alt="Smilegirl"
               />
+              <div class="portfolio-baner">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
