--- a/index.html
+++ b/index.html
@@ -276,20 +276,20 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-              <img
-                src="./images/image6.jpg"
-                width="360"
-                height="300"
-                alt="Cashless_Payment"
-              />
-              <div class="portfolio-baner">
+                <img
+                  src="./images/image6.jpg"
+                  width="360"
+                  height="300"
+                  alt="Cashless_Payment"
+                />
+                <div class="portfolio-baner">
                   <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
                   </p>
                 </div>
-                </div>
+              </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -297,20 +297,20 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-              <img
-                src="./images/image7.jpg"
-                width="360"
-                height="300"
-                alt="laptop"
-              />
-              <div class="portfolio-baner">
+                <img
+                  src="./images/image7.jpg"
+                  width="360"
+                  height="300"
+                  alt="laptop"
+                />
+                <div class="portfolio-baner">
                   <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
                   </p>
                 </div>
-                </div>
+              </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
@@ -318,20 +318,20 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-              <img
-                src="./images/image8.jpg"
-                width="360"
-                height="300"
-                alt="car_while"
-              />
-              <div class="portfolio-baner">
+                <img
+                  src="./images/image8.jpg"
+                  width="360"
+                  height="300"
+                  alt="car_while"
+                />
+                <div class="portfolio-baner">
                   <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
                   </p>
                 </div>
-                </div>
+              </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -339,13 +339,13 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-              <img
-                src="./images/image9.jpg"
-                width="360"
-                height="300"
-                alt="phonescreen"
-              />
-              <div class="portfolio-baner">
+                <img
+                  src="./images/image9.jpg"
+                  width="360"
+                  height="300"
+                  alt="phonescreen"
+                />
+                <div class="portfolio-baner">
                   <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -360,20 +360,20 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-              <img
-                src="./images/image10.jpg"
-                width="360"
-                height="300"
-                alt="Smilegirl"
-              />
-              <div class="portfolio-baner">
+                <img
+                  src="./images/image10.jpg"
+                  width="360"
+                  height="300"
+                  alt="Smilegirl"
+                />
+                <div class="portfolio-baner">
                   <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
                   </p>
                 </div>
-                </div>
+              </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -389,10 +389,45 @@
         <a href="./index.html" class="logo-footer"
           >Web<span class="logo-studio-footer">Studio</span>
         </a>
+        <div class="footer-wraper">
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <div class="social-media">
+          <p class="social-title">Social media</p>
+          <ul class="social-list">
+            <li class="social-item">
+              <a href="" class="social-link">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#iconinstagram"></use>
+              </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icontwitter"></use>
+              </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#iconfacebook"></use>
+              </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#iconlinkedin"></use>
+              </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
       </div>
     </footer>
   </body>
