--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
           <h2 class="advantages-title visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
+              <div class="icon-box">
               <svg class="icon-advantages" width="64" height="64">
                 <use href="./images/icons.svg#iconantenna"></use>
               </svg>
+            </div>
               <h3 class="advantages-subtitle">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
@@ -72,9 +74,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="icon-box">
               <svg class="icon-advantages" width="64" height="64">
                 <use href="./images/icons.svg#iconclock"></use>
               </svg>
+              </div>
               <h3 class="advantages-subtitle">Punctuality</h3>
               <p class="advantages-text">
                 Bring the key message to the brand's audience for the best price
@@ -82,9 +86,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="icon-box">
               <svg class="icon-advantages" width="64" height="64">
                 <use href="./images/icons.svg#icondiagram"></use>
               </svg>
+              </div>
               <h3 class="advantages-subtitle">Diligence</h3>
               <p class="advantages-text">
                 Research and confirm brands with the strongest digital growth
@@ -92,9 +98,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="icon-box">
               <svg class="icon-advantages" width="64" height="64">
                 <use href="./images/icons.svg#iconastronaut"></use>
               </svg>
+              </div>
               <h3 class="advantages-subtitle">Technologies</h3>
               <p class="advantages-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -119,28 +127,36 @@
               <div class="our-team-text-block">
                 <h3 class="our-team-name">Mark Guerrero</h3>
                 <p class="our-team-role">Product Designer</p>
-                <div class="sociallinks-icon-block">
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                <ul class="sociallinks-link-block">
+                  <li class="sociallinks-item">
+                   <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#iconinstagram"></use>
                     </svg>
                   </a>
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                  </li>
+                  <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#icontwitter"></use>
                     </svg>
                   </a>
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                  </li>
+                  <li class="sociallinks-item">
+                  <a class="sociallinks-link " href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#iconfacebook"></use>
                     </svg>
                   </a>
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                  </li>
+                  <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#iconlinkedin"></use>
                     </svg>
                   </a>
-                </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-item">
@@ -153,28 +169,36 @@
               <div class="our-team-text-block">
                 <h3 class="our-team-name">Tom Ford</h3>
                 <p class="our-team-role">Frontend Developer</p>
-                <div class="sociallinks-icon-block">
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                  <ul class="sociallinks-link-block">
+                    <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#iconinstagram"></use>
                     </svg>
                   </a>
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                  </li>
+                  <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#icontwitter"></use>
                     </svg>
                   </a>
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                  </li>
+                  <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#iconfacebook"></use>
                     </svg>
                   </a>
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                  </li>
+                  <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#iconlinkedin"></use>
                     </svg>
                   </a>
-                </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-item">
@@ -187,28 +211,36 @@
               <div class="our-team-text-block">
                 <h3 class="our-team-name">Camila Garcia</h3>
                 <p class="our-team-role">Marketing</p>
-                <div class="sociallinks-icon-block">
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+               <ul class="sociallinks-link-block">
+                    <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#iconinstagram"></use>
                     </svg>
                   </a>
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                  </li>
+                  <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#icontwitter"></use>
                     </svg>
                   </a>
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                  </li>
+                  <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#iconfacebook"></use>
                     </svg>
                   </a>
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                  </li>
+                  <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#iconlinkedin"></use>
                     </svg>
                   </a>
-                </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-item">
@@ -221,28 +253,36 @@
               <div class="our-team-text-block">
                 <h3 class="our-team-name">Daniel Wilson</h3>
                 <p class="our-team-role">UI Designer</p>
-                <div class="sociallinks-icon-block">
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                <ul class="sociallinks-link-block">
+                    <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#iconinstagram"></use>
                     </svg>
                   </a>
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                  </li>
+                  <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#icontwitter"></use>
                     </svg>
                   </a>
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                  </li>
+                  <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#iconfacebook"></use>
                     </svg>
                   </a>
-                  <a class="sociallinks-icon" href="">
-                    <svg class="icon">
+                  </li>
+                  <li class="sociallinks-item">
+                  <a class="sociallinks-link" href="">
+                    <svg class="icon" width="16" height="16">
                       <use href="./images/icons.svg#iconlinkedin"></use>
                     </svg>
                   </a>
-                </div>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -262,10 +302,8 @@
                   alt="banking-app"
                 />
                 <div class="portfolio-baner">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
+                  <p class="portfolio-overlay">
+                     - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
                 </div>
               </div>
@@ -283,10 +321,8 @@
                   alt="Cashless_Payment"
                 />
                 <div class="portfolio-baner">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
+                  <p class="portfolio-overlay">
+                    - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
                 </div>
               </div>
@@ -304,10 +340,8 @@
                   alt="laptop"
                 />
                 <div class="portfolio-baner">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
+                  <p class="portfolio-overlay">
+                     - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
                 </div>
               </div>
@@ -325,10 +359,8 @@
                   alt="car_while"
                 />
                 <div class="portfolio-baner">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
+                  <p class="portfolio-overlay">
+                     - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
                 </div>
               </div>
@@ -346,10 +378,8 @@
                   alt="phonescreen"
                 />
                 <div class="portfolio-baner">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
+                  <p class="portfolio-overlay">
+                    - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
                 </div>
               </div>
@@ -367,10 +397,8 @@
                   alt="Smilegirl"
                 />
                 <div class="portfolio-baner">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
+                  <p class="portfolio-overlay">
+                    - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
                 </div>
               </div>
@@ -386,14 +414,15 @@
 
     <footer class="footer">
       <div class="container">
+        <div class="footer-wraper">
         <a href="./index.html" class="logo-footer"
           >Web<span class="logo-studio-footer">Studio</span>
         </a>
-        <div class="footer-wraper">
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        </div>
         <div class="social-media">
           <p class="social-title">Social media</p>
           <ul class="social-list">
@@ -427,7 +456,6 @@
             </li>
           </ul>
         </div>
-      </div>
       </div>
     </footer>
   </body>
