--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
           <ul class="advantages-list">
             <li class="advantages-item">
               <div class="icon-box">
-              <svg class="icon-advantages" width="64" height="64">
-                <use href="./images/icons.svg#iconantenna"></use>
-              </svg>
-            </div>
+                <svg class="icon-advantages" width="64" height="64">
+                  <use href="./images/icons.svg#iconantenna"></use>
+                </svg>
+              </div>
               <h3 class="advantages-subtitle">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
@@ -75,9 +75,9 @@
             </li>
             <li class="advantages-item">
               <div class="icon-box">
-              <svg class="icon-advantages" width="64" height="64">
-                <use href="./images/icons.svg#iconclock"></use>
-              </svg>
+                <svg class="icon-advantages" width="64" height="64">
+                  <use href="./images/icons.svg#iconclock"></use>
+                </svg>
               </div>
               <h3 class="advantages-subtitle">Punctuality</h3>
               <p class="advantages-text">
@@ -87,9 +87,9 @@
             </li>
             <li class="advantages-item">
               <div class="icon-box">
-              <svg class="icon-advantages" width="64" height="64">
-                <use href="./images/icons.svg#icondiagram"></use>
-              </svg>
+                <svg class="icon-advantages" width="64" height="64">
+                  <use href="./images/icons.svg#icondiagram"></use>
+                </svg>
               </div>
               <h3 class="advantages-subtitle">Diligence</h3>
               <p class="advantages-text">
@@ -99,9 +99,9 @@
             </li>
             <li class="advantages-item">
               <div class="icon-box">
-              <svg class="icon-advantages" width="64" height="64">
-                <use href="./images/icons.svg#iconastronaut"></use>
-              </svg>
+                <svg class="icon-advantages" width="64" height="64">
+                  <use href="./images/icons.svg#iconastronaut"></use>
+                </svg>
               </div>
               <h3 class="advantages-subtitle">Technologies</h3>
               <p class="advantages-text">
@@ -129,32 +129,32 @@
                 <p class="our-team-role">Product Designer</p>
                 <ul class="sociallinks-link-block">
                   <li class="sociallinks-item">
-                   <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#iconinstagram"></use>
-                    </svg>
-                  </a>
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#iconinstagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#icontwitter"></use>
-                    </svg>
-                  </a>
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icontwitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="sociallinks-item">
-                  <a class="sociallinks-link " href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#iconfacebook"></use>
-                    </svg>
-                  </a>
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#iconfacebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#iconlinkedin"></use>
-                    </svg>
-                  </a>
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#iconlinkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -169,34 +169,34 @@
               <div class="our-team-text-block">
                 <h3 class="our-team-name">Tom Ford</h3>
                 <p class="our-team-role">Frontend Developer</p>
-                  <ul class="sociallinks-link-block">
-                    <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#iconinstagram"></use>
-                    </svg>
-                  </a>
+                <ul class="sociallinks-link-block">
+                  <li class="sociallinks-item">
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#iconinstagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#icontwitter"></use>
-                    </svg>
-                  </a>
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icontwitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#iconfacebook"></use>
-                    </svg>
-                  </a>
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#iconfacebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#iconlinkedin"></use>
-                    </svg>
-                  </a>
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#iconlinkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -211,34 +211,34 @@
               <div class="our-team-text-block">
                 <h3 class="our-team-name">Camila Garcia</h3>
                 <p class="our-team-role">Marketing</p>
-               <ul class="sociallinks-link-block">
-                    <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#iconinstagram"></use>
-                    </svg>
-                  </a>
+                <ul class="sociallinks-link-block">
+                  <li class="sociallinks-item">
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#iconinstagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#icontwitter"></use>
-                    </svg>
-                  </a>
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icontwitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#iconfacebook"></use>
-                    </svg>
-                  </a>
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#iconfacebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#iconlinkedin"></use>
-                    </svg>
-                  </a>
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#iconlinkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -254,33 +254,33 @@
                 <h3 class="our-team-name">Daniel Wilson</h3>
                 <p class="our-team-role">UI Designer</p>
                 <ul class="sociallinks-link-block">
-                    <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#iconinstagram"></use>
-                    </svg>
-                  </a>
+                  <li class="sociallinks-item">
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#iconinstagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#icontwitter"></use>
-                    </svg>
-                  </a>
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icontwitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#iconfacebook"></use>
-                    </svg>
-                  </a>
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#iconfacebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="sociallinks-item">
-                  <a class="sociallinks-link" href="">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg#iconlinkedin"></use>
-                    </svg>
-                  </a>
+                    <a class="sociallinks-link" href="">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#iconlinkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -303,7 +303,9 @@
                 />
                 <div class="portfolio-baner">
                   <p class="portfolio-overlay">
-                     - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
               </div>
@@ -322,7 +324,9 @@
                 />
                 <div class="portfolio-baner">
                   <p class="portfolio-overlay">
-                    - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
               </div>
@@ -341,7 +345,9 @@
                 />
                 <div class="portfolio-baner">
                   <p class="portfolio-overlay">
-                     - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
               </div>
@@ -360,7 +366,9 @@
                 />
                 <div class="portfolio-baner">
                   <p class="portfolio-overlay">
-                     - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
               </div>
@@ -379,7 +387,9 @@
                 />
                 <div class="portfolio-baner">
                   <p class="portfolio-overlay">
-                    - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
               </div>
@@ -398,7 +408,9 @@
                 />
                 <div class="portfolio-baner">
                   <p class="portfolio-overlay">
-                    - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
               </div>
@@ -415,43 +427,43 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-wraper">
-        <a href="./index.html" class="logo-footer"
-          >Web<span class="logo-studio-footer">Studio</span>
-        </a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+          <a href="./index.html" class="logo-footer"
+            >Web<span class="logo-studio-footer">Studio</span>
+          </a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
         </div>
         <div class="social-media">
           <p class="social-title">Social media</p>
           <ul class="social-list">
             <li class="social-item">
               <a href="" class="social-link">
-              <svg class="social-icon" width="24" height="24">
-                <use href="./images/icons.svg#iconinstagram"></use>
-              </svg>
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#iconinstagram"></use>
+                </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="" class="social-link">
-              <svg class="social-icon" width="24" height="24">
-                <use href="./images/icons.svg#icontwitter"></use>
-              </svg>
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icontwitter"></use>
+                </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="" class="social-link">
-              <svg class="social-icon" width="24" height="24">
-                <use href="./images/icons.svg#iconfacebook"></use>
-              </svg>
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#iconfacebook"></use>
+                </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="" class="social-link">
-              <svg class="social-icon" width="24" height="24">
-                <use href="./images/icons.svg#iconlinkedin"></use>
-              </svg>
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#iconlinkedin"></use>
+                </svg>
               </a>
             </li>
           </ul>
