--- a/index.html
+++ b/index.html
@@ -301,13 +301,11 @@
                   height="300"
                   alt="banking-app"
                 />
-                <div class="portfolio-baner">
-                  <p class="portfolio-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Banking App</h3>
@@ -322,13 +320,11 @@
                   height="300"
                   alt="Cashless_Payment"
                 />
-                <div class="portfolio-baner">
-                  <p class="portfolio-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
@@ -343,13 +339,11 @@
                   height="300"
                   alt="laptop"
                 />
-                <div class="portfolio-baner">
-                  <p class="portfolio-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
@@ -364,13 +358,11 @@
                   height="300"
                   alt="car_while"
                 />
-                <div class="portfolio-baner">
-                  <p class="portfolio-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
@@ -385,13 +377,11 @@
                   height="300"
                   alt="phonescreen"
                 />
-                <div class="portfolio-baner">
-                  <p class="portfolio-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
@@ -406,13 +396,11 @@
                   height="300"
                   alt="Smilegirl"
                 />
-                <div class="portfolio-baner">
-                  <p class="portfolio-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-border-text">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
