--- a/index.html
+++ b/index.html
@@ -456,6 +456,25 @@
             </li>
           </ul>
         </div>
+
+          <form class="subscribe-form" name="subscribe" autocomplete="off">
+            <span class="subscribe-title">Subscribe</span>
+            <div class="form-group">
+            <label class="input-label" for="email"></label>
+            <input
+             class="email-form" 
+             type="email" 
+             name="email" 
+             placeholder="E-mail">
+            <button class="subscribe-btn" type="submit">
+              <span class="subscribe-btn-title">Subscribe</span>
+              <svg class="button-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
