--- a/index.html
+++ b/index.html
@@ -458,22 +458,26 @@
         </div>
 
           <form class="subscribe-form" name="subscribe" autocomplete="off">
-            <span class="subscribe-title">Subscribe</span>
-            <div class="form-group">
-            <label class="input-label" for="email"></label>
-            <input
-             class="email-form" 
-             type="email" 
-             name="email" 
-             placeholder="E-mail">
-            <button class="subscribe-btn" type="submit">
-              <span class="subscribe-btn-title">Subscribe</span>
-              <svg class="button-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-icon-send"></use>
-              </svg>
-            </button>
-            </div>
-          </form>
+  <form class="subscribe-form" name="subscribe" autocomplete="off">
+  <div class="input-group">
+    <p class="subscribe-title">Subscribe</p>
+    <div class="form-wraper">
+      <label class="input-label" for="email"></label>
+      <input
+        class="email-input"
+        type="email"
+        name="email"
+        placeholder="E-mail"
+      >
+      <button class="subscribe-btn" type="submit">
+        <span class="subscribe-btn-title">Subscribe</span>
+        <svg class="subscribe-icon" width="24" height="24">
+          <use href="./images/icons.svg#icon-icon-send"></use>
+        </svg>
+      </button>
+    </div>
+  </div>
+</form>
         </div>
       </div>
     </footer>
