--- a/index.html
+++ b/index.html
@@ -468,8 +468,7 @@
                 placeholder="E-mail"
               />
             </label>
-            <button class="subscribe-btn" type="submit">
-              <span class="subskribe-btn-title">Subscribe</span>
+            <button class="subscribe-btn" type="submit">Subscribe
               <svg class="subscribe-btn-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
