--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
             </div>
           </div>
 
-          <div class="input-wrapper">
+          <div class="input-wrapper-commit">
             <label for="user-comment" class="modal-input-label">Comment</label>
             <textarea
               id="user-comment"
